// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Test should render closed card 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  isOpen={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "deepskyblue",
        "borderColor": "white",
        "borderStyle": "solid",
        "borderWidth": 4,
        "height": 140,
        "justifyContent": "center",
        "marginBottom": 10,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "width": "27%",
      },
    ]
  }
  testID="card-1"
>
  <Text
    isOpen={false}
    style={
      Array [
        Object {
          "color": "white",
          "fontSize": 30,
        },
      ]
    }
    testID="card-content-1"
  >
    ?
  </Text>
</View>
`;

exports[`Card Test should render open card 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  isOpen={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "white",
        "borderStyle": "solid",
        "borderWidth": 4,
        "height": 140,
        "justifyContent": "center",
        "marginBottom": 10,
        "marginLeft": 10,
        "marginRight": 10,
        "marginTop": 10,
        "width": "27%",
      },
    ]
  }
  testID="card-1"
>
  <Text
    isOpen={true}
    style={
      Array [
        Object {
          "color": "black",
          "fontSize": 30,
        },
      ]
    }
    testID="card-content-1"
  >
    1
  </Text>
</View>
`;
